# gemini-rust

./: .gitignore  Cargo.toml  README.md  validate-gemini-rust.sh
.github/workflows/: ci.yml
examples/: basic.rs
src/: client.rs  config.rs  error.rs  lib.rs  models.rs
src/cache/: mod.rs
src/functions/: mod.rs
src/grounding/: mod.rs
src/streaming/: mod.rs
src/thinking/: mod.rs
tests/: integration.rs  live_api_tests.rs
